app/src/components/Pages/ContactPage/ContactPage.scss
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");

// rests
* {
  padding: 0;
  margin: 0;
}

// background
.contact-us__page {
  background-image: url("./assets/bg/bg.svg");
  background-image: url("./assets/bg/bg.svg"),
    linear-gradient(to bottom, transparent 90vh, #120309 90vh);
  background-size: 100vw auto;
  background-position: top calc(min(238px, 20vh)) right 0px;
  background-repeat: no-repeat;
}

// main layout
.contact-us__page {
  width: 100vw;
  min-height: calc(min(1080px, 100vh));

  form {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;

    width: calc(100% - 50px * 2);
    margin: auto;

    .box {
      flex: 1 1 220px;
      margin: 50px;
    }

    .form-card__info {
      height: calc(min(70vh, 600px));
    }

    .form-card__message {
      height: calc(min(50vh, 380px));
    }
  }
}

// icons
.linkedin-icon {
  width: 29.5px;
  height: 30px;

  margin-right: 10px;
}

.email-icon {
  width: 45.5px;
  height: 30px;
}

// form cars
.form-card {
  background: #ffffff;
  box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.25);
  padding: 1.5rem;
}

// message
.contact-us__message {
  #{&}__title {
    font-family: "Roboto", sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 4.2vw;
    line-height: 5.2vw;
  }

  #{&}__decription {
    font-family: "Roboto", sans-serif;
    font-style: normal;
    font-weight: 100;
    font-size: 2.2vw;
    line-height: 2.5vw;

    padding-bottom: 35px;
  }
}

//form
button,
input,
textarea {
  border: none;
  background-image: none;
  background-color: transparent;
  box-shadow: none;
  width: 100%;

  &:focus {
    outline: none;
  }
}

.form-card {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-content: center;

  padding: 25px;

  .form-input-item {
    padding: 8px 12px;

    background: #ffffff;
    box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25);
    border-radius: 3px;

    transition: all 0.3s ease-in-out;
  }

  .focused {
    box-shadow: inset 0px 0px 4px #80d8ff;
  }

  input,
  textarea {
    font-size: 1.5vw;
    line-height: 2vw;
    padding: 2px;

    &::placeholder{
      font-style: italic;
      opacity: 0.5;
    }
  }

  textarea {
    height: 220px;
  }

  label {
    text-transform: uppercase;
    font-family: Roboto;
    font-style: normal;
    font-weight: normal;
    font-size: 0.9vw;
    line-height: 1vw;

    color: #f45b69;
  }

  input[type="submit"] {
    background-color: #f45b69;
    color: white;
    border-radius: 3px;
    text-transform: uppercase;
    padding: 10px;

    &:focus {
      outline: none;
      box-shadow: 0px 0px 4px #5fcfff;
    }
  }
}

